# sentimentipos

./: .gitattributes  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: sentimentipos.tex  sentimentipos_pres.tex  task_paper.py
src/sentimentipos/: __init__.py
src/sentimentipos/analysis/: __init__.py  model.py  task_analysis.py
src/sentimentipos/data/: ipo_df.xlsx  original_ipo_data.xlsx
src/sentimentipos/data_management/: __init__.py  clean_data.py  data_processing.py  task_data_management.py
src/sentimentipos/final/: __init__.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py  test_data_management.py  test_data_processing.py
