[metadata]
name = sentimentipos
description = Sentiment Analysis Scores and IPO First Day Returns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s6lulisc/sentimentipos
author = Luke Liscio
author_email = s6lulisc@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/s6lulisc/sentimentipos
    Documentation = https://github.com/s6lulisc/sentimentipos
    Github = https://github.com/s6lulisc/sentimentipos
    Tracker = https://github.com/s6lulisc/sentimentipos/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/sentimentipos/_version.py
